--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "jaque",
     "description": "An experimental Q-JSGI framework.",
-    "version": "0.1.8",
+    "version": "0.1.10",
     "homepage": "http://github.com/kriskowal/jaque/",
     "contributors": [
         "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
@@ -21,12 +21,12 @@
         "type": "git",
         "url": "http://github.com/kriskowal/jaque.git"
     },
-    "main": "lib/jaque.js",
+    "main": "jaque.js",
     "dependencies": {
         "n-util": ">=0.0.1",
-        "q-http": ">=0.0.3",
-        "q-util": ">=0.0.1",
-        "q-fs": ">=0.0.3",
+        "qq": ">=0.2.0",
+        "q-http": ">=0.1.2",
+        "q-fs": ">=0.1.9",
         "mimeparse": ">=0.1.3",
         "uuid": ">=0.0.2"
     },
