--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jaque",
-    "version": "0.1.12",
+    "version": "0.1.13",
     "description": "An experimental Q-JSGI framework.",
     "homepage": "http://github.com/kriskowal/jaque/",
     "contributors": [
@@ -26,9 +26,12 @@
         "n-util": "0.0.1",
         "qq": "0.3.1",
         "q-http": "0.1.2",
-        "q-fs": "0.1.10",
+        "q-fs": "0.1.12",
         "mimeparse": "0.1.3",
         "uuid": "0.0.2"
+    },
+    "devDependencies": {
+        "test": "0.1.0"
     },
     "engines": {
         "node": ">=0.2.0"
