--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jaque",
-    "version": "0.1.16",
+    "version": "0.1.17",
     "description": "An experimental Q-JSGI framework.",
     "homepage": "http://github.com/kriskowal/jaque/",
     "contributors": [
@@ -27,6 +27,7 @@
         "qq": "0.3.2",
         "q-http": "0.1.4",
         "q-fs": "0.1.15",
+        "mime": "1.2.4",
         "mimeparse": "0.1.3",
         "uuid": "0.0.2"
     },
