--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "jaque",
-    "version": "0.1.21",
-    "description": "An experimental Q-JSGI framework.",
+    "version": "1.0.0",
+    "description": "Q HTTP Begin-, Middle-, and End-wares",
+    "keywords": ["http", "route", "middleware", "q", "jack"],
     "homepage": "http://github.com/kriskowal/jaque/",
     "contributors": [
         "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
@@ -24,9 +25,9 @@
     "main": "jaque.js",
     "dependencies": {
         "n-util": "0.0.1",
-        "qq": "0.3.2",
-        "q-http": "0.1.7",
-        "q-fs": "0.1.18",
+        "q": "0.7.2",
+        "q-http": "0.1.8",
+        "q-fs": "0.1.19",
         "mime": "1.2.4",
         "mimeparse": "0.1.3",
         "uuid": "0.0.2"
