--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
     "name": "jaque",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Q HTTP Begin-, Middle-, and End-wares",
-    "keywords": ["http", "route", "middleware", "q", "jack"],
+    "keywords": [
+        "http",
+        "route",
+        "middleware",
+        "q",
+        "jack"
+    ],
     "homepage": "http://github.com/kriskowal/jaque/",
     "contributors": [
         "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
@@ -26,7 +32,7 @@
     "dependencies": {
         "n-util": "0.0.1",
         "q": "0.7.2",
-        "q-http": "0.1.8",
+        "q-http": "0.1.9",
         "q-fs": "0.1.19",
         "mime": "1.2.4",
         "mimeparse": "0.1.3",
