--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jaque",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "description": "Q HTTP Begin-, Middle-, and End-wares",
     "keywords": [
         "http",
@@ -16,7 +16,7 @@
     ],
     "bugs": {
         "mail": "kris@cixar.com",
-        "web": "http://github.com/kriskowal/jaque/issues"
+        "url": "http://github.com/kriskowal/jaque/issues"
     },
     "licenses": [
         {
@@ -32,7 +32,7 @@
     "dependencies": {
         "n-util": "0.0.1",
         "q": "0.7.2",
-        "q-http": "0.1.9",
+        "q-http": "0.1.10",
         "q-fs": "0.1.19",
         "mime": "1.2.4",
         "mimeparse": "0.1.3",
