--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jaque",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "description": "Q HTTP Begin-, Middle-, and End-wares",
     "keywords": [
         "http",
@@ -31,12 +31,11 @@
     "main": "jaque.js",
     "dependencies": {
         "n-util": "0.0.1",
-        "q": "0.7.2",
-        "q-http": "0.1.11",
-        "q-fs": "0.1.19",
+        "q": "0.8.2",
+        "q-http": "0.1.12",
+        "q-fs": "0.1.24",
         "mime": "1.2.4",
-        "mimeparse": "0.1.3",
-        "uuid": "0.0.2"
+        "mimeparse": "0.1.4"
     },
     "devDependencies": {
         "test": "0.1.0"
